[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.11"
authors = ["The Social Proof Foundation, LLC. <brandon@socialproof.foundation>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main" }
bcs = "0.1.6"
serde = "1.0.228"
serde_json = "1.0.145"
itertools = { version = "0.14.0" }
anyhow = "1.0"
rand = "0.9.1"
hex = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.15.0"

# MySocial dependencies
mys_types = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-types"}
mysten-service = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main" }
mys_sdk = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-sdk"}
shared_crypto = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "shared-crypto" }
move-core-types = { git = "https://github.com/The-Social-Proof-Foundation/mys-core.git", branch = "main" }
prometheus_closure_metric = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "prometheus-closure-metric" }
mys-move-build = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-move-build" }
test-cluster = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "test-cluster" }

# this matches the sdk version used by mvr-types dep: https://github.com/MystenLabs/mvr
mys-sdk-types = { git = "https://github.com/The-Social-Proof-Foundation/mys-rust-sdk", features = ["serde"], branch = "main" }
mys-transaction-builder = { git = "https://github.com/The-Social-Proof-Foundation/mys-rust-sdk", branch = "main" }

[profile.release]
panic = 'abort'
