[package]
name = "mydata-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.42"
serde = { workspace = true }
serde_json = { workspace = true }
fastcrypto = { workspace = true }
bcs = { workspace = true }
tracing = { workspace = true }
crypto = { path = "../crypto" }
mys-sdk-types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
mys_types = { workspace = true }